package app.domain.model.employee;

public class OrganizationRole {

    private String role;

    public OrganizationRole(String role) {
        this.role = role;
    }

    public String getRole() {
        return role;
    }

    public void setRole(String role) {
        this.role = role;
    }

    @Override
    public String toString() {
        return role;
    }
}
