@startuml

skinparam classAttributeIconSize 0
hide methods


class Company{
-designation
}

class Employee{
-id
-name
-address
-phoneNumber
-email
-socCode
}

class OrganizationRole{
-role
}

class SpecialistDoctor{
-doctorIndexNumber
}

class DiagnosisReport{
-report
}

Company "1"-right-"*" Employee: > employ
Company "1"--"*" OrganizationRole: > comprehends
Employee <|-- SpecialistDoctor
Employee "*"--"1" OrganizationRole: > has/plays
SpecialistDoctor "1"--"1...*" DiagnosisReport: > does



@enduml